Initial commit of index.html

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                 <div id="branding" role="banner">
                     <h1 id="site-title">
                         <span>
-						<a href="https://www.parajulinawaraj.com.np/" rel="home">Mark A. Wilson, Professor of Geology</a>
+						<a href="https://www.parajulinawaraj.com.np/" rel="home">Nawaraj Parajuli, Professor of Geology</a>
 					</span>
                     </h1>
                     <div id="site-description"></div>
