--- a/index.html
+++ b/index.html
@@ -26,6 +26,64 @@
             max-width: 100%;
             height: auto;
             border-radius: 10px; /* Add rounded corners to the images */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow to the images */
+        }
+
+        /* Improved styling for section headings */
+        h2 {
+            font-size: 2rem;
+            color: #333;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        /* Improved styling for section content */
+        p {
+            font-size: 1.2rem;
+            color: #555;
+            line-height: 1.5;
+            text-align: center;
+        }
+
+        /* Style for navigation buttons */
+        nav ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+        }
+
+        nav li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #333;
+            font-size: 1.2rem;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: #ff5733; /* Change the color on hover */
+        }
+
+        /* Improved styling for the footer */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        /* Style for the footer link */
+        footer a {
+            text-decoration: none;
+            color: #ff5733;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -89,7 +147,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Professor [Your Name]. All rights reserved.</p>
+        <p>&copy; 2023 Professor [Your Name]. All rights reserved. | Website by <a href="https://www.example.com" target="_blank">Your Name</a></p>
     </footer>
 </body>
 </html>
