--- a/index.html
+++ b/index.html
@@ -85,6 +85,26 @@
         footer a:hover {
             text-decoration: underline;
         }
+
+        /* Additional styles for a polished look */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+        }
+
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Custom styles for the introduction section */
+        .introduction {
+            background-color: #f9f9f9;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -103,7 +123,7 @@
     </header>
     
     <div class="content">
-        <section id="about">
+        <section class="introduction" id="about">
             <h2>About Me</h2>
             <div class="photo-container">
                 <img src="intro-photo.jpg" alt="Introduction Photo">
