--- a/index.html
+++ b/index.html
@@ -139,6 +139,41 @@
             margin-bottom: 10px;
             color: #555;
         }
+
+        /* Stylish bottom navigation bar */
+        .bottom-nav {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            padding: 10px 0;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+        }
+
+        .bottom-nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: space-around;
+        }
+
+        .bottom-nav li {
+            margin: 0;
+        }
+
+        .bottom-nav a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.2rem;
+            transition: color 0.3s;
+        }
+
+        .bottom-nav a:hover {
+            color: #ff5733; /* Change the color on hover */
+        }
     </style>
 </head>
 <body>
@@ -212,6 +247,19 @@
                 <p>Office: Room 123, [Your Building]</p>
             </div>
         </section>
+    </div>
+
+    <!-- Stylish bottom navigation bar -->
+    <div class="bottom-nav">
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#teaching">Teaching</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </div>
 
     <footer>
