--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Nawaraj Parajuli</h1>
-      <h2>I'm a Professional Photographer In New York City</h2>
+      <h1>Nawaraj Parajuli Assistant Professor, Tribhuvan University</h1>
+      <h2>I am Nawaraj Parajuli, presently holding the position of Assistant Professor in the Department of Geology at Prithivi Narayan Campus, Tribhuvan University. This website has been established as a central platform to showcase my academic and research pursuits. To navigate through the various sections of this website, you may conveniently utilize the navigation tabs located above.
+       
+        My professional expertise primarily encompasses the domains of structural and engineering geology. I earned my M.Sc. degree from Tribhuvan University and have been ardently imparting my knowledge and enthusiasm for geology to students at Prithvi Narayan Campus since the inception of my tenure in 2020.
+        
+        </h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
