--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Nawaraj Parajuli Assistant Professor, Tribhuvan University</h1>
+      <h1>Nawaraj Parajuli Assistant Professor
+                Tribhuvan University</h1>
       <h2>I am Nawaraj Parajuli, presently holding the position of Assistant Professor
         in the Department of Geology at Prithivi Narayan Campus, Tribhuvan University.
         This website has been established as a central platform to showcase my academic
