--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
     <div class="hero-container">
       <h1>Nawaraj Parajuli Assistant Professor
                 Tribhuvan University </h1>
-      <h2> Geologist
-           
-        </h2>
+      <h2> Geologist </h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
