--- a/index.html
+++ b/index.html
@@ -121,7 +121,13 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Field:</strong> <span>Structural and Engineering Geology</span></li>
                   </ul>
                 </div>
-                                                <!-- End About Me Section -->
+            
+
+                <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
+                  <div class="count-box">
+                    <i class="bi bi-journal-richtextr" style="color: #8a1ac2;"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+                    <!-- End About Me Section -->
 
     <!-- ======= My Resume Section ======= -->
     <section id="resume" class="resume">
