--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="hero-container">
       <h1>Nawaraj Parajuli Assistant Professor
                 Tribhuvan University </h1>
-      <h2> Geologist </h2>
+      <h2> Geologist</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -116,6 +116,7 @@
                 </div>
                 <div class="col-lg-6">
                   <ul>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>34</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nawaraj.parajuli@prnc.tu.edu.np</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Field:</strong> <span>Geology</span></li>
