--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>34</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Job:</strong> <span>Assistant Progessor Geology</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nawaraj.parajuli@prnc.tu.edu.np</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Field:</strong> <span>Geology</span></li>
