--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
-    <div class="hero-bg-container">
+    <div class="hero-container">
       <h1>Nawaraj Parajuli Assistant Professor
                 Tribhuvan University </h1>
       <h2> Geologist</h2>
