--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   <div class="count-box">
                     <i class="bi bi-award" style="color: #ffb459;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>International Colaboration</strong> Landslide Mapping</p>
+                    <p><strong>International Colaboration</strong> Landslide Mapping and Field Lecturer for Geological Field Work</p>
                   </div>
                 </div>
               </div>
