--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/Geological Field Work/Ggfw-5.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/Geological Field Work/gfw-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
                 <p>
