--- a/index.html
+++ b/index.html
@@ -257,9 +257,13 @@
       <div class="container">
 
         <div class="section-title">
-          <span>My Services</span>
-          <h2>My Services</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>Teaching</span>
+          <h2>Teaching</h2>
+          <p>
+            Teaching geology imparts expertise in Earth's processes and materials, fostering analytical
+            skills crucial for careers in geoscience and environmental science. It combines fieldwork, 
+            lab work, and critical thinking to prepare professionals for understanding and managing 
+            Earth's dynamic systems.</p>
         </div>
 
         <div class="row">
