--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">Structural Geology Theory and Practical (GEO.101 and GEO.102)</a></h4>
+              <p class="description"> In this educational journey, we comprehensively explore structural geology, covering fundamentals, geological maps, cross-section analysis, stereographic projection, stress and strain mechanics, unconformity identification, and field geology. This holistic approach equips students with theoretical knowledge and practical skills, shaping them into adept geologists.</p>
             </div>
           </div>
 
