--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">Petrology Theory and Lab (GEO.201 and GEO.202)</a></h4>
+              <p class="description">In Petrology Geology, we explore Earth's rocks comprehensively, covering igneous, sedimentary, and metamorphic types. Through hands-on labs and advanced microscopy, students master rock identification and analysis, revealing mineral compositions and textures. These skills empower future petrologists to decode Earth's geological history with precision, one rock at a time.r</p>
             </div>
           </div>
 
