--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Stratigraphy and Geology of Nepal and Lab(GEO.302a)</a></h4>
+              <p class="description">Exploring the Stratigraphy and Geology of Nepal in GEO.302a is a captivating journey into the Earth's history. We delve into the intricate layers of Nepal's geological past, studying sedimentary rocks and their formations. Through immersive lab sessions and fieldwork, students gain practical experience in rock analysis and stratigraphic interpretation. This course not only equips students with a deep understanding of Nepal's geological evolution but also sharpens their observational skills, making them adept geologists ready to decipher the Earth's ancient narratives in the field.</p>
             </div>
           </div>
 
