--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Petrology Theory and Lab (GEO.201 and GEO.202)</a></h4>
-              <p class="description">In Petrology Geology, we explore Earth's rocks comprehensively, covering igneous, sedimentary, and metamorphic types. Through hands-on labs and advanced microscopy, students master rock identification and analysis, revealing mineral compositions and textures. These skills empower future petrologists to decode Earth's geological history with precision, one rock at a time.r</p>
+              <p class="description">In Petrology Geology, we explore Earth's rocks comprehensively, covering igneous,
+                 sedimentary, and metamorphic types. Through hands-on labs and advanced microscopy, students master 
+                 rock identification and analysis, revealing mineral compositions and textures. These skills empower
+                  future petrologists to decode Earth's geological history with precision, one rock at a time.</p>
             </div>
           </div>
 
@@ -287,7 +290,14 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Stratigraphy and Geology of Nepal and Lab(GEO.302a)</a></h4>
-              <p class="description">Exploring the Stratigraphy and Geology of Nepal in GEO.302a is a captivating journey into the Earth's history. We delve into the intricate layers of Nepal's geological past, studying sedimentary rocks and their formations. Through immersive lab sessions and fieldwork, students gain practical experience in rock analysis and stratigraphic interpretation. This course not only equips students with a deep understanding of Nepal's geological evolution but also sharpens their observational skills, making them adept geologists ready to decipher the Earth's ancient narratives in the field.</p>
+              <p class="description">Exploring the Stratigraphy and Geology of Nepal in GEO.302a
+                 is a captivating journey into the Earth's history. We delve into the intricate 
+                 layers of Nepal's geological past, studying sedimentary rocks and their formations.
+                  Through immersive lab sessions and fieldwork, students gain practical experience 
+                  in rock analysis and stratigraphic interpretation. This course not only equips 
+                  students with a deep understanding of Nepal's geological evolution but also sharpens
+                   their observational skills, making them adept geologists ready to decipher the 
+                   Earth's ancient narratives in the field.</p>
             </div>
           </div>
 
