--- a/index.html
+++ b/index.html
@@ -290,14 +290,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Stratigraphy and Geology of Nepal and Lab(GEO.302a)</a></h4>
-              <p class="description">Exploring the Stratigraphy and Geology of Nepal in GEO.302a
-                 is a captivating journey into the Earth's history. We delve into the intricate 
-                 layers of Nepal's geological past, studying sedimentary rocks and their formations.
-                  Through immersive lab sessions and fieldwork, students gain practical experience 
-                  in rock analysis and stratigraphic interpretation. This course not only equips 
-                  students with a deep understanding of Nepal's geological evolution but also sharpens
-                   their observational skills, making them adept geologists ready to decipher the 
-                   Earth's ancient narratives in the field.</p>
+              <p class="description">GEO.302a offers an engaging journey into Nepal's geological history, emphasizing the study of sedimentary rock formations. Through immersive lab sessions and fieldwork, students not only gain practical experience in rock analysis and stratigraphic interpretation but also develop a profound understanding of Nepal's geological evolution. This comprehensive course sharpens their observational skills, preparing them to expertly decipher Earth's ancient narratives in real-world geological settings.</p>
             </div>
           </div>
 
