--- a/index.html
+++ b/index.html
@@ -297,8 +297,10 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Exploration Geology and Mining Geology Theory and Lab (GEO.401 and GEO.402), Engineering Geology Theory and Lab (GEO.403 and GEO.404)  </a></h4>
+              <p class="description">In Exploration Geology and Mining Geology Theory and Lab, students embark on an exciting journey into Earth's hidden treasures. These courses cover geological exploration methods, mining techniques, and mineral resource assessment. Students gain expertise in mineral exploration and mining through theoretical knowledge, hands-on lab work, and practical field experiences, preparing them to contribute to sustainable resource management.
+
+                In GEO.403 and GEO.404, we delve into Engineering Geology Theory and Lab, exploring geological factors impacting engineering projects. These courses teach students to assess geological hazards, site suitability, and geotechnical solutions through theory, labs, and fieldwork. Mastering engineering geology principles equips students to ensure infrastructure stability and safety in diverse geological settings.</p>
             </div>
           </div>
 
