--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">Exploration Geology and Mining Geology Theory and Lab (GEO.401 and GEO.402), Engineering Geology Theory and Lab (GEO.403 and GEO.404)  </a></h4>
-              <p class="description">In Exploration Geology and Mining Geology Theory and Lab, students embark on an exciting journey into Earth's hidden treasures, learning exploration methods, mining techniques, and resource assessment. In GEO.403 and GEO.404, we delve into Engineering Geology Theory and Lab, exploring geological factors impacting engineering projects. Both sets of courses provide a comprehensive blend of theory, practical labs, and hands-on fieldwork to prepare students for roles in resource management and ensuring infrastructure safety. These programs equip students with the skills and knowledge needed to contribute to sustainable geological practices and the stability of infrastructure projects in diverse geological settings, making them proficient geologists ready to unlock Earth's geological wealth..</p>
+              <p class="description">In Exploration Geology and Mining Geology Theory and Lab, students explore Earth's treasures, learning exploration methods, mining techniques, and resource assessment. In GEO.403 and GEO.404, we study Engineering Geology Theory and Lab, focusing on geological factors in engineering. Both courses combine theory, labs, and fieldwork to prepare students for roles in resource management and ensuring infrastructure safety, equipping them with the skills needed for diverse geological settings.</p>
             </div>
           </div>
 
