--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/Geological Field Work/gfw-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>A. Gansser</h3>
+                <h4>(1964,p.256)</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  The Himalayas have no direct continuation either towards the west or to the east. The singular syntaxial bends on both extremes preclude a straightforward continuation of the Himalayan elements.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
