--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   <div class="count-box">
                     <i class="bi bi-award" style="color: #ffb459;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>International Colaboration</strong> Landslide Mapping and Field Lecturer for Geological Field Work</p>
+                    <p><strong>International Colaboration</strong> Landslide Mapping and Field Lecturer for testimonial</p>
                   </div>
                 </div>
               </div>
@@ -307,16 +307,16 @@
       </div>
     </section><!-- End My Services Section -->
 
-    <!-- ======= Geological Field Work Section ======= -->
-    <section id="Geological Field Work" class="Geological Field Work">
+    <!-- ======= testimonial Section ======= -->
+    <section id="testimonial" class="testimonial">
       <div class="container position-relative">
 
-        <div class="Geological Field Work-slider swiper" data-aos="fade-up" data-aos-delay="100">
+        <div class="testimonial-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/Geological Field Work/gfw-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonial/gfw-1.jpg" class="testimonial-img" alt="">
                 <h3>A. Gansser</h3>
                 <h4>(1964,p.256)</h4>
                 <p>
@@ -329,7 +329,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/Geological Field Work/gfw-2.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonial/gfw-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
                 <p>
@@ -342,7 +342,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/Geological Field Work/gfw-3.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonial/gfw-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
                 <p>
@@ -368,7 +368,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/Geological Field Work/gfw-5.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonial/gfw-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
                 <p>
@@ -384,7 +384,7 @@
         </div>
 
       </div>
-    </section><!-- End Geological Field Work Section -->
+    </section><!-- End testimonial Section -->
 
     <!-- ======= My Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
