--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       </div>
     </section><!-- End My Services Section -->
 
-    <!-- ======= testimonial Section ======= -->
+    <!-- ======= Testimonial Section ======= -->
     <section id="testimonial" class="testimonial">
       <div class="container position-relative">
 
