--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
         <div class="section-title">
           <span>My Portfolio</span>
-          <h2>My Portfolio</h2>
+          <h2>Geological Field Work</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
