--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <div class="section-title">
           <span>My Portfolio</span>
           <h2>Geological Field Work</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>Geological fieldwork is considered an integral component of geology education. It serves as a vital platform for fostering hands-on learning, skill acquisition, and the synthesis of geological knowledge, while also cultivating critical observation, problem-solving abilities, and proficiency in geological mapping. Furthermore, it plays a pivotal role in inspiring students' enduring dedication to the field of Earth science.</p>
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-center">
