--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
       <div class="container">
 
         <div class="section-title">
-          <span>My Portfolio</span>
+          <span>Geological Field Work</span>
           <h2>Geological Field Work</h2>
           <p>Geological fieldwork is considered an integral component of geology education. It serves as a vital platform for fostering hands-on learning, skill acquisition, and the synthesis of geological knowledge, while also cultivating critical observation, problem-solving abilities, and proficiency in geological mapping. Furthermore, it plays a pivotal role in inspiring students' enduring dedication to the field of Earth science.</p>
         </div>
