--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <ul id="portfolio-flters" class="d-flex justify-content-center">
           <li data-filter="*" class="filter-active">All</li>
           <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
+          <li data-filter=".filter-mountain landscape">Mountain Landscape</li>
           <li data-filter=".filter-web">Web</li>
         </ul>
 
