--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-mountain landscape">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-4.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Mountain Landscape 2</h4>
