--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           <h2>About Me</h2>
           <p>I am Nawaraj Parajuli, presently holding the position of Assistant Professor
             in the Department of Geology at Prithivi Narayan Campus, Tribhuvan University.
-          This website has been established as a central platform to showcase my academic
-            and research pursuits. To navigate through the various sections of this website, 
+          This student participationsite has been established as a central platform to showcase my academic
+            and research pursuits. To navigate through the various sections of this student participationsite, 
             you may conveniently utilize the navigation tabs located above.  
             My professional expertise primarily encompasses the domains of structural and 
             engineering geology. I earned my M.Sc. degree from Tribhuvan University and 
@@ -109,7 +109,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Nawaraj Parajuli</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.tu.edu.np</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>student participationsite:</strong> <span>www.tu.edu.np</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+9779841631110</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pokhara, Nepal</span></li>
                   </ul>
@@ -400,7 +400,7 @@
           <li data-filter="*" class="filter-active">All</li>
           <li data-filter=".filter-app">App</li>
           <li data-filter=".filter-mountain landscape">Mountain Landscape</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter=".filter-student participation">Student Participation</li>
         </ul>
 
         <div class="row portfolio-container">
@@ -415,12 +415,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-student participation">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-2.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/Geological field work/FW-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+              <h4>Student Participation 3</h4>
+              <p>Student Participation</p>
+              <a href="assets/img/Geological field work/FW-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="student participation 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -445,12 +445,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-student participation">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-5.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/Geological field work/FW-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+              <h4>Student Participation 2</h4>
+              <p>Student Participation</p>
+              <a href="assets/img/Geological field work/FW-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="student participation 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -485,12 +485,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-student participation">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-9.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/Geological field work/FW-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+              <h4>Student Participation 3</h4>
+              <p>Student Participation</p>
+              <a href="assets/img/Geological field work/FW-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="student participation 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
