--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </section><!-- End My Resume Section -->
 
     <!-- ======= My Services Section ======= -->
-    <section id="services" class="services">
+    <section id="teaching" class="Teaching">
       <div class="container">
 
         <div class="section-title">
