--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       </div>
     </section><!-- End My Resume Section -->
 
-    <!-- ======= My Services Section ======= -->
+    <!-- ======= Teaching Section ======= -->
     <section id="teaching" class="Teaching">
       <div class="container">
 
