--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
       </div>
     </section><!-- End testimonial Section -->
 
-    <!-- ======= My Portfolio Section ======= -->
+    <!-- ======= GEOLOGICAL FIELD WORK ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
 
@@ -498,7 +498,7 @@
         </div>
 
       </div>
-    </section><!-- End My Portfolio Section -->
+    </section><!-- End GEOLOGICAL FIELD WORK Section -->
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
