--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
-        <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+        <li><a class="nav-link scrollto " href="#geological field work">Geological Field Work</a></li>
         <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
@@ -386,7 +386,7 @@
       </div>
     </section><!-- End testimonial Section -->
 
-    <!-- ======= GEOLOGICAL FIELD WORK ======= -->
+    <!-- ======= Geological Field Work ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
 
