--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Nawaraj Parajuli</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>student participationsite:</strong> <span>www.tu.edu.np</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>site:</strong> <span>www.tu.edu.np</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+9779841631110</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pokhara, Nepal</span></li>
                   </ul>
