--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     </section><!-- End testimonial Section -->
 
     <!-- ======= Geological Field Work ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="Geological Field Work" class="Geological Field Work">
       <div class="container">
 
         <div class="section-title">
