--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </div>
 
       </div>
-    </section><!-- End My Services Section -->
+    </section><!-- End Teaching Section -->
 
     <!-- ======= Testimonial Section ======= -->
     <section id="testimonial" class="testimonial">
