--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
 
       </div>
     </section><!-- End My Resume Section -->
-    <!-- ======= My Services Section ======= -->
+   
+    <!-- ======= Teaching Section ======= -->
     <section id="teaching" class="Teaching">
       <div class="container">
 
