--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -45,8 +45,8 @@
         <li><a class="nav-link scrollto " href="#hero">Home</a></li>
         <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
-        <li><a class="nav-link scrollto" href="#services">Services</a></li>
-        <li><a class="nav-link scrollto active" href="#portfolio">Portfolio</a></li>
+        <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
+        <li><a class="nav-link scrollto active" href="#geological field work">Geological Field Work</a></li>
         <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
