--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     </section><!-- End testimonial Section -->
 
     <!-- ======= Geological Field Work ======= -->
-    <section id="Geological Field Work" class="Geological Field Work">
+    <section id="geological field work" class="Geological Field Work">
       <div class="container">
 
         <div class="section-title">
