--- a/index.html
+++ b/index.html
@@ -252,6 +252,54 @@
       </div>
     </section><!-- End My Resume Section -->
 
+    <!-- ======= My Services Section ======= -->
+    <section id="teaching" class="Teaching">
+      <div class="container">
+
+        <div class="section-title">
+          <span>Teaching</span>
+          <h2>My Services</h2>
+          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End My Services Section -->
+   
     <!-- ======= Teaching Section ======= -->
     <section id="teaching" class="Teaching">
       <div class="container">
@@ -298,12 +346,13 @@
                   <h4 class="title"><a href="">Exploration Geology and Mining Geology Theory and Lab (GEO.401 and GEO.402), Engineering Geology Theory and Lab (GEO.403 and GEO.404)  </a></h4>
                   <p class="description">In Exploration Geology and Mining Geology Theory and Lab, students explore Earth's treasures, learning exploration methods, mining techniques, and resource assessment. In GEO.403 and GEO.404, we study Engineering Geology Theory and Lab, focusing on geological factors in engineering. Both courses combine theory, labs, and fieldwork to prepare students for roles in resource management and ensuring infrastructure safety, equipping them with the skills needed for diverse geological settings.</p>
                 </div>
-          </div>
-
-        </div>
-
-      </div>
+              </div>
     
+            </div>
+    
+       </div>
+    </section><!-- End My Services Section -->
+
    
     <!-- ======= Testimonial Section ======= -->
     <section id="testimonial" class="testimonial">
