--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
         <div class="section-title">
           <span>Teaching</span>
-          <h2>My Teaching</h2>
+          <h2>Teaching</h2>
           <p>Teaching geology imparts expertise in Earth's processes and materials, fostering analytical
             skills crucial for careers in geoscience and environmental science. It combines fieldwork, 
             lab work, and critical thinking to prepare professionals for understanding and managing 
