--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>App 1</h4>
+              <h4>1st and 2nd year learning basic geological field  concept</h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
