--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-6.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>App 3</h4>
+              <h4>Embarking on a geological site visit with a professor Simon from Stanford University, USA </h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
